# Water-Rights-Visualizer

./: .env.jpl-production  .env.local  .env.ose-production  .gitignore  .screenrc  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.backend  Dockerfile.ui  Example.geojson  Getting IDs for Google Drive Files.ipynb  Getting a File from Google Drive.ipynb  Inlcude File ID Metadata.ipynb  JPL-NMOSE_ET_visualizer.py  README.md  S3 Data Source.ipynb  Smith.geojson  boto3_expired_token_traceback.txt  copy_gdrive_to_s3.py  date_directory_IDs.csv  docker-compose.jpl.yml  docker-compose.yml  get_google_drive_IDs.py  init-api.sh  init.sh  list s3.ipynb  makefile  nginx.conf  package-lock.json  package.json  production.env  pymongo_test_data.py  report_queue.sample.json  run.sh  setup.cfg  setup.py  target.geojson  test_target.geojson  try_data_sources.py  (+14 more)
client/: .env.development  .env.production  index.html  package.json  tsconfig.json  vite.config.ts
geojson_sample_files/: CircleN.geojson  CircleSE.geojson  CircleSW.geojson  Rectangle.geojson
misc/: File ID Search.ipynb  Getting IDs for Google Drive Files.ipynb  Water Rights GUI Debugging.ipynb  copy_openet_to_s3.py  get_google_drive_IDs.py  requirements.txt  try_data_sources.py  water_rights_visualizer-Allmen  water_rights_visualizer.py
page/: index.html  map.js  map_shapefile.js  progress.css  progress.html  progress.js  start.css  start.html  start_end_year.js  style.css  submit_form.js  validate_name.js
raster/: raster.py
server/: constants.js  download.js  end_year.js  geojson.js  prepare_geojson.js  reproject.js  (+9 more)
(+99 files in other folders)
