[metadata]
name = water_rights_visualizer
description = New Mexico Water Rights Visualizer
long_description = file: README.md

[options.entry_points]
console_scripts =
    water-rights-gui = water_rights_visualizer.water_rights_gui:main
    water-rights-visualizer = water_rights_visualizer.water_rights_visualizer:main
    list-google-drive = water_rights_visualizer.list_google_drive:main
    