[metadata]
name = water_rights_visualizer
description = New Mexico Water Rights Visualizer
long_description = file: README.md

[options]
python_requires = >=3.10
install_requires =
    astropy
    affine
    boto3
    h5py
    geojson
    geopandas
    jupyter
    matplotlib
    numpy
    pandas
    pillow
    pydrive2
    pygeos
    pyresample
    rasterio>1.0.0
    scikit-image
    scipy
    seaborn
    shapely
    termcolor
    tk
    area

[options.entry_points]
console_scripts =
    water-rights-visualizer = water_rights_visualizer.water_rights_visualizer:main
    water-rights-tk = water_rights_visualizer.water_rights_gui_tk:main
    list-google-drive = water_rights_visualizer.list_google_drive:main
    